src/global.css
/* ... */
.hero-button:hover{
  transform: scale(1.1);
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1
  }
}

.footer-content {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(23%, 1fr));
  gap: 2rem;
  background-color: rgb(229, 231, 235);
  align-items: center;
  padding: 2rem;
}

.newsletter-input {
  display: flex;
}

input:focus{
  background-color: white;
}

footer input {
  box-shadow: outset rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
  background-color: white;
  text-size-adjust: auto;
  padding: 16px;
  border-radius: 6px;
  padding: 10px;
  width: 60%;
  font-size: 16px;
}

.contacts {

  align-self: center;
}

.newsletter-title {
  color: black;
  font-family: ui-sans-serif;
  font-size: 20px;
  letter-spacing: 0.5px;
  line-height: 28px;
}

.newsletter-description {
  font-family: Arial, Helvetica, sans-serif;
}
.newsletter-button {
  margin-left: 2rem;
  width: min-content;
  padding: 0 24px;
  height: 48px;
  border-radius: 4px;
  background-color: white;
  color: black;
  font-size: ui-sans-serif;
  align-self: center;
  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px
}

.newsletter-button:hover{
  color: white;
  background-color: black;
  transform: scale(1.05);
}

footer a {
  all: unset;
}

.contacts-title {
  color: black;
  font-size: 1rem;
  letter-spacing: 0.4px;
  line-height: 24px;
}

.contacts{
  line-height: 24px;
}

footer span {
  padding-left: 2rem;
  color: rgb(100, 100, 100);
}

footer a:hover{
  color:#0085fe;
  cursor: pointer;
}


img.right-arrow{
  width: 20px;
  padding-left: 5px;
  height: 20px;
  filter: invert(100%) sepia(98%) saturate(8%) hue-rotate(182deg) brightness(104%) contrast(104%);
}

img.left-arrow{
  width: 20px;
  height: 20px;
  filter: invert(36%) sepia(64%) saturate(3581%) hue-rotate(193deg) brightness(101%) contrast(101%);
}

.buttons * {
  border-radius: 8px;
}
.linkedin-logo {
  width: 34px;
}

.github-logo {
  width: 34px;
}


.social {
  text-align: center;
  line-height: 3;
}

.footer-links {
  display: flex;
  flex-direction: column;
  font-size: 1.5rem;
  line-height: 1.5;
}
.logos {
  display: flex;
  column-gap: 0.25rem;
  justify-content: center;
  align-items: center;
}

@media(max-width: 1530px) {
  .detail-container {
    width: 80%;
  }
}
@media(max-width: 1270px){
  .footer-content{
    grid-template-columns: repeat(2, 1fr);
  }
  .social {
    text-align: start;
  }
  .logos {
    justify-content: start;
  }
}

@media(max-width: 1120px) {
  .hero {
    flex-wrap: wrap;
  }
  .hero-title {
    font-size: 3rem;
  }
  .hero-text{
    font-size: 1.5rem;
  }
  .hero-button {
    width: 100%;
    font-size: 2rem;
    padding: 1rem;
  }
  .cart-container {
    width: 88%;
  }
  .detail-container {
    width: 100%;
    height: min-content;
    flex-wrap: wrap;
    justify-content: center;
    padding: 0;
  }
  .description-detail {
    width: 80%;
  }
  .image-detail-view {
    margin-top: 1rem;
  }
  .product-details {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .product-title {
    font-size: 1.2rem;
  }

  .product-details button {
    width: 300px;
  }
  .product-details > button:nth-child(1) {
    width: 300px;
  }

  .image-detail {
    width: 275px;
  }
}

@media(max-width: 760px) {
  .hero > *{
    line-height: 2;
  }
  .footer-content {
    line-height: 3;
    grid-template-columns: 1fr;
  }
  .nav-title{
    display: none;
  }
  nav {
    font-size: 0.75rem;
  }

}

@media(max-width: 612px) {

  .cart-item-container {
    justify-content: center;
    flex-wrap: wrap;
    padding-left: 1rem;
  }
  .cost {
    width: 80%;
  }
 .quantity > * {
  padding: 0.25rem 0.75rem;
  }
  .image-detail {
    width: 230px;
  }
}

@media(max-width: 310px) {
  .hero-title {
    font-size: 3rem;
  }
  .cart-container{
    width: 100%;
  }

  #root > div > nav > div > a{
    padding-right: 1rem;
  }

  .buttons > button {
    width: 200px;
  }
  img.logo-image {
    display: none;
  }
  .links {
    width: 100%;
  }
  .products {
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
  }
  .image-detail {
    width: 150px;
  }
  .product-details > button:nth-child(1) {
    width: 90%;
  }
  .product-title {
    font-size: medium;
    text-align: center;
  }
  .product-details > button {
    width: 90%;
    font-size: medium;
  }

}

